<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailFragment"
    android:padding="16dp"
    android:orientation="vertical">

    <!--suppress AndroidDomInspection -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImageDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:shapeAppearanceOverlay="@style/ImageRoundedStyle"
        android:scaleType="fitXY"
        android:layout_marginTop="16dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/tv_name"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvCreatedAtDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/createdAt"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvDescriptionDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/description"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible" />
</LinearLayout>