<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    android:id="@+id/rvStories"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tv_name"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <!--suppress AndroidDomInspection -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:shapeAppearanceOverlay="@style/ImageRoundedStyle"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvCreatedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/createdAt"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/description"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>